# RoboticProjects

./: Notes.md  README.md
project1/: CMakeLists.txt
project1/model/Building2/: model.sdf
project1/model/Warehouse-robot/: model.config  model.sdf
project1/model/my-robot/: model.config  model.sdf
project1/model/robot2/: model.sdf
project1/script/: hello.cpp  model_push.cpp
project1/world/: indoor.world  simple.world
project2/src/ball_chaser/src/: process_image.cpp
project2/src/my_robot/: package.xml
project3/src/ball_chaser/: CMakeLists.txt  package.xml
project3/src/my_robot/launch/: amcl.launch
project3/src/my_robot/maps/: indoor.yaml
project3/src/my_robot/urdf/: my_robot.xacro
project3/src/my_robot/worlds/: indoor.world
project3/src/pgm_map_creator/: .gitignore
project4/src/ball_chaser/src/: drive_bot.cpp
project4/src/my_robot/launch/: localization.launch  mapping.launch  teleop.launch  world.launch
project4/src/my_robot/urdf/: my_robot.xacro
project5/src/add_markers/: package.xml
project5/src/add_markers/src/: add_markers.cpp
project5/src/my_robot/launch/: amcl.launch  world.launch
project5/src/my_robot/maps/: simple.yaml
project5/src/my_robot/urdf/: my_robot.gazebo
project5/src/my_robot/worlds/: simple.world
project5/src/pick_objects/: CMakeLists.txt  package.xml
project5/src/pick_objects/src/: pick_objects.cpp
project5/src/rvizConfig/: navigation.rviz
project5/src/scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
(+3 files in other folders)
